@@ -18,17 +18,6 @@ if (sourceEventIsPresent)
     sourceEvent.storeOldValues();
 }
 
-bool outputEventIsPresent = runTime.controlDict().found("eventFileOutput");
-word outputEventFileName = runTime.controlDict().lookupOrDefault<word>("eventFileOutput","");
-outputEventFile outputEvent(outputEventFileName);
-if (outputEventIsPresent) outputEvent.update(runTime.startTime().value());
-
-scalar eventTimeStep(runTime.controlDict().lookupOrDefault<scalar>("eventTimeStep",0));
-if (eventTimeStep > 0)
-{
-    if (infiltrationEventIsPresent) infiltrationEvent.addIntermediateTimeSteps(eventTimeStep);
-}
-
 //- Updating infiltration value using event file
 if (infiltrationEventIsPresent)
 {
@@ -62,4 +51,41 @@ if (sourceEventIsPresent)
         idCoordinates[pointi] = mesh.findNearestCell(sourceEvent.coordinates()[pointi]);
         sourceTerm[idCoordinates[pointi]] += sourceEvent.currentValue(pointi)/mesh.V()[idCoordinates[pointi]];
     }
+}
+
+//- patch event reader for time step managing
+List<patchEventFile*> patchEventList;
+bool patchEventIsPresent = false;
+if (patchEventFiles.size() > 0)
+{
+    patchEventIsPresent = true;
+    if(patchEventFiles.found("eventInfiltration"))
+    {
+        patchEventList.append(new patchEventFile(patchEventFiles["eventInfiltration"]));
+    }
+    if(patchEventFiles.found("eventFlux"))
+    {
+        patchEventList.append(new patchEventFile(patchEventFiles["eventFlux"]));
+    }
+}
+
+if (patchEventIsPresent)
+{
+    forAll(patchEventList,patchEventi)
+    {
+        patchEventList[patchEventi]->update(runTime.startTime().value());
+        patchEventList[patchEventi]->storeOldValues();
+    }
+}
+
+//- Output event reading
+bool outputEventIsPresent = runTime.controlDict().found("eventFileOutput");
+word outputEventFileName = runTime.controlDict().lookupOrDefault<word>("eventFileOutput","");
+outputEventFile outputEvent(outputEventFileName);
+if (outputEventIsPresent) outputEvent.update(runTime.startTime().value());
+
+scalar eventTimeStep(runTime.controlDict().lookupOrDefault<scalar>("eventTimeStep",0));
+if (eventTimeStep > 0)
+{
+    if (infiltrationEventIsPresent) infiltrationEvent.addIntermediateTimeSteps(eventTimeStep);
 }
