@@ -2,5 +2,5 @@ date 0
 inlet -3e-6
 date 5000
 inlet -1e-6
-date 10000
+date 8000
 inlet 0
